_build/html/reports/cctv_21A_문제.log
Traceback (most recent call last):
  File "C:\anaconda3\envs\JBook\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\anaconda3\envs\JBook\lib\asyncio\base_events.py", line 642, in run_until_complete
    return future.result()
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\anaconda3\envs\JBook\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# ë¼ì´ë¸ŒëŸ¬ë¦¬ ì„í¬íŠ¸
import as pd                      # pandasë¥¼ pdë¡œ ì¤€ë¹„
import as np                       # numbpyë¥¼ npë¡œ ì¤€ë¹„
import as plt          # pyplotì„ pltë¡œ ì¤€ë¹„
import                           # platform ì¤€ë¹„
from import   # ê¸€ê¼´ ì²˜ë¦¬ ì¤€ë¹„

# ì£¼í”¼í„° ë…¸íŠ¸ë¶ì—ì„œ ì‹œê°í™” ê²°ê³¼ê°€ ì§ì ‘ ì¶œë ¥ë˜ë„ë¡ ì„¤ì •
 inline

# íŒë‹¤ìŠ¤ ë°ì´í„°í”„ë ˆì„ ì‹¤ìˆ˜ ì¶œë ¥ í˜•ì‹ ì§€ì •
pd.options.display.float_format = '{:,.1f}'.format  
------------------

[1;36m  File [1;32m"<ipython-input-1-840e5fb566bd>"[1;36m, line [1;32m2[0m
[1;33m    import as pd                      # pandasë¥¼ pdë¡œ ì¤€ë¹„[0m
[1;37m           ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-840e5fb566bd>, line 2)

